--- a/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
+++ b/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
@@ -4,14 +4,34 @@
     <form (ngReset)="reiniciarForm()" (ngSubmit)="salvar()" [formGroup]="cadastro">
       <mat-card-content>
         <mat-form-field class="full-width">
-          <input matInput placeholder="Título" name="titulo" formControlName="titulo">
+          <input matInput placeholder="Título *" name="titulo" formControlName="titulo">
+          <mat-error
+            *ngIf="(cadastro.touched || cadastro.dirty)  && cadastroControls.titulo.errors?.required">
+            Campo Obrigatório
+          </mat-error>
+          <mat-error
+            *ngIf="(cadastro.touched || cadastro.dirty)  && cadastroControls.titulo.errors?.minlength">
+            Campo deve ter no mínimo 2 caracteres
+          </mat-error>
+          <mat-error
+            *ngIf="(cadastro.touched || cadastro.dirty)  && cadastroControls.titulo.errors?.maxlength">
+            Campo deve ter no máximo 256 caracteres
+          </mat-error>
         </mat-form-field>
         <mat-form-field class="full-width">
           <input matInput placeholder="Link Foto" name="urlFoto" formControlName="urlFoto">
+          <mat-error
+            *ngIf="(cadastro.touched || cadastro.dirty) && cadastroControls.urlFoto.errors?.minlength">
+            Campo deve conter no mínimo 10 caracteres
+          </mat-error>
         </mat-form-field>
         <mat-form-field class="full-width">
-          <input matInput [matDatepicker]="picker" placeholder="Data de Lançamento" name="dataLancamento"
-                 formControlName="dataLancamento">
+          <input readonly matInput [matDatepicker]="picker" placeholder="Data de Lançamento *" name="dataLancamento"
+                 formControlName="dataLancamento" (click)="picker.open()">
+          <mat-error
+            *ngIf="(cadastro.touched || cadastro.dirty) && cadastroControls.dataLancamento.errors?.required">
+            Campo Obrigatório
+          </mat-error>
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
@@ -19,19 +39,40 @@
           <textarea matInput placeholder="Descrição" name="descricao" formControlName="descricao"></textarea>
         </mat-form-field>
         <mat-form-field class="full-width">
-          <input type="number" min="0" max="10" step="1" matInput placeholder="Nota IMDb" name="notaImdb" formControlName="notaImdb">
+          <input type="number" min="0" max="10" step="1" matInput placeholder="Nota IMDb" name="notaImdb"
+                 formControlName="notaImdb">
+          <mat-error
+            *ngIf="(cadastro.touched || cadastro.dirty) && cadastroControls.notaImdb.errors?.required">
+            Campo Obrigatório
+          </mat-error>
+          <mat-error
+            *ngIf="(cadastro.touched || cadastro.dirty) && cadastroControls.notaImdb.errors?.min">
+            Campo deve ter no mínimo o valor 0
+          </mat-error>
+          <mat-error
+            *ngIf="(cadastro.touched || cadastro.dirty) && cadastroControls.notaImdb.errors?.maxl">
+            Campo deve ter no máximo o valor 10
+          </mat-error>
         </mat-form-field>
         <mat-form-field class="full-width">
           <input matInput placeholder="Link IMDb" name="urlImdb" formControlName="urlImdb">
+          <mat-error
+            *ngIf="(cadastro.touched || cadastro.dirty) && cadastroControls.urlImdb.errors?.minlength">
+            Campo deve conter no mínimo 10 caracteres
+          </mat-error>
         </mat-form-field>
         <mat-form-field class="full-width">
-          <mat-select placeholder="Gênero" formControlName="genero">
+          <mat-select placeholder="Gênero *" formControlName="genero">
             <mat-option value="Ação">Açao</mat-option>
             <mat-option value="Aventura">Aventura</mat-option>
             <mat-option value=">Ficção Científica">Ficção Científica</mat-option>
             <mat-option value="Romance">Romance</mat-option>
             <mat-option value="Terror">Terror</mat-option>
           </mat-select>
+          <mat-error
+            *ngIf="(cadastro.touched || cadastro.dirty) && cadastroControls.genero.errors?.required">
+            Campo Obrigatório
+          </mat-error>
         </mat-form-field>
       </mat-card-content>
       <mat-card-actions>
