--- a/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
+++ b/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
@@ -3,77 +3,19 @@
   <mat-card class="center width50">
     <form (ngReset)="reiniciarForm()" (ngSubmit)="salvar()" [formGroup]="cadastro">
       <mat-card-content>
-        <mat-form-field class="full-width">
-          <input matInput placeholder="Título *" name="titulo" formControlName="titulo">
-          <mat-error
-            *ngIf="validacao.hasErrorValidation(cadastroControls.titulo, 'required')">
-            Campo Obrigatório
-          </mat-error>
-          <mat-error
-            *ngIf="validacao.hasErrorValidation(cadastroControls.titulo,'minlength')">
-            Campo deve ter no mínimo 5 caracteres
-          </mat-error>
-          <mat-error
-            *ngIf="validacao.hasErrorValidation(cadastroControls.titulo, 'maxlength')">
-            Campo deve ter no máximo 256 caracteres
-          </mat-error>
-        </mat-form-field>
-        <mat-form-field class="full-width">
-          <input matInput placeholder="Link Foto" name="urlFoto" formControlName="urlFoto">
-          <mat-error
-            *ngIf="validacao.hasErrorValidation(cadastroControls.urlFoto, 'minlength')">
-            Campo deve conter no mínimo 10 caracteres
-          </mat-error>
-        </mat-form-field>
-        <mat-form-field class="full-width">
-          <input readonly matInput [matDatepicker]="picker" placeholder="Data de Lançamento *" name="dataLancamento"
-                 formControlName="dataLancamento" (click)="picker.open()">
-          <mat-error
-            *ngIf="validacao.hasErrorValidation(cadastroControls.dataLancamento, 'required')">
-            Campo Obrigatório
-          </mat-error>
-          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-          <mat-datepicker #picker></mat-datepicker>
-        </mat-form-field>
-        <mat-form-field class="full-width">
-          <textarea matInput placeholder="Descrição" name="descricao" formControlName="descricao"></textarea>
-        </mat-form-field>
-        <mat-form-field class="full-width">
-          <input type="number" min="0" max="10" step="1" matInput placeholder="Nota IMDb" name="notaImdb"
-                 formControlName="notaImdb">
-          <mat-error
-            *ngIf="validacao.hasErrorValidation(cadastroControls.notaImdb, 'required')">
-            Campo Obrigatório
-          </mat-error>
-          <mat-error
-            *ngIf="validacao.hasErrorValidation(cadastroControls.notaImdb, 'min')">
-            Campo deve ter no mínimo o valor 0
-          </mat-error>
-          <mat-error
-            *ngIf="validacao.hasErrorValidation(cadastroControls.notaImdb, 'maxl')">
-            Campo deve ter no máximo o valor 10
-          </mat-error>
-        </mat-form-field>
-        <mat-form-field class="full-width">
-          <input matInput placeholder="Link IMDb" name="urlImdb" formControlName="urlImdb">
-          <mat-error
-            *ngIf="validacao.hasErrorValidation(cadastroControls.urlImdb, 'minlength')">
-            Campo deve conter no mínimo 10 caracteres
-          </mat-error>
-        </mat-form-field>
-        <mat-form-field class="full-width">
-          <mat-select placeholder="Gênero *" formControlName="genero">
-            <mat-option value="Ação">Açao</mat-option>
-            <mat-option value="Aventura">Aventura</mat-option>
-            <mat-option value=">Ficção Científica">Ficção Científica</mat-option>
-            <mat-option value="Romance">Romance</mat-option>
-            <mat-option value="Terror">Terror</mat-option>
-          </mat-select>
-          <mat-error
-            *ngIf="validacao.hasErrorValidation(cadastroControls.genero, 'required')">
-            Campo Obrigatório
-          </mat-error>
-        </mat-form-field>
+        <dio-input-text placeholder="Titulo *"  controlName="titulo" [formGroup]="cadastro"></dio-input-text>
+
+        <dio-input-text placeholder="Link Foto" controlName="urlFoto" [formGroup]="cadastro"></dio-input-text>
+
+        <dio-input-date placeholder="Data de Lançamento *" controlName="dataLancamento" [formGroup]="cadastro"></dio-input-date>
+
+        <dio-input-textarea placeholder="Descrição" controlName="descricao" [formGroup]="cadastro"></dio-input-textarea>
+
+        <dio-input-number min="0" max="10" step="0.1" controlName="notaImdb" placeholder="Nota IMDb *" [formGroup]="cadastro"></dio-input-number>
+
+        <dio-input-text placeholder="Link IMDb" controlName="urlImdb" [formGroup]="cadastro"></dio-input-text>
+
+        <dio-input-select placeholder="Gênero *" controlName="genero" [formGroup]="cadastro"></dio-input-select>
       </mat-card-content>
       <mat-card-actions>
         <button type="submit" color="accent" mat-raised-button>Salvar</button>
