--- a/src/app/shared/components/campos/input-number/input-number.component.html
+++ b/src/app/shared/components/campos/input-number/input-number.component.html
@@ -15,11 +15,11 @@
     </mat-error>
     <mat-error
       *ngIf="validacao.hasErrorValidation(formControl, 'min')">
-      Campo deve ter no mínimo o valor 0
+      Campo deve ter no mínimo o valor {{validacao.lengthValidar(formControl, 'min')}}
     </mat-error>
     <mat-error
       *ngIf="validacao.hasErrorValidation(formControl, 'max')">
-      Campo deve ter no máximo o valor 10
+      Campo deve ter no máximo o valor {{validacao.lengthValidar(formControl, 'max')}}
     </mat-error>
   </mat-form-field>
 </div>
