passando um array para componente select

--- a/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
+++ b/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="app-title">Cadastrar Filme</mat-toolbar>
 <div class="main-div">
   <mat-card class="center width50">
-    <form (ngReset)="reiniciarForm()" (ngSubmit)="salvar()" [formGroup]="cadastro">
+    <form (ngReset)="reiniciarForm()" (ngSubmit)="salvar()" [formGroup]="cadastro" autocomplete="off" novalidate>
       <mat-card-content>
         <dio-input-text placeholder="Titulo *"  controlName="titulo" [formGroup]="cadastro"></dio-input-text>
 
@@ -15,7 +15,7 @@
 
         <dio-input-text placeholder="Link IMDb" controlName="urlImdb" [formGroup]="cadastro"></dio-input-text>
 
-        <dio-input-select placeholder="Gênero *" controlName="genero" [formGroup]="cadastro"></dio-input-select>
+        <dio-input-select placeholder="Gênero *" controlName="genero" [opcoes]="generos" [formGroup]="cadastro"></dio-input-select>
       </mat-card-content>
       <mat-card-actions>
         <button type="submit" color="accent" mat-raised-button>Salvar</button>
