--- a/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
+++ b/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
@@ -13,7 +13,7 @@
 
         <dio-input-number min="0" max="10" step="0.1" controlName="notaImdb" placeholder="Nota IMDb *" [formGroup]="cadastro"></dio-input-number>
 
-        <dio-input-text placeholder="Link IMDb" controlName="urlImdb" [formGroup]="cadastro"></dio-input-text>
+        <dio-input-text placeholder="Link IMDb" controlName="urlIMDb" [formGroup]="cadastro"></dio-input-text>
 
         <dio-input-select placeholder="Gênero *" controlName="genero" [opcoes]="generos" [formGroup]="cadastro"></dio-input-select>
       </mat-card-content>
