--- a/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
+++ b/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
@@ -1,21 +1,15 @@
 <mat-toolbar class="app-title">Cadastrar Filme</mat-toolbar>
 <div class="main-div">
-  <mat-card class="center width50">
-    <form (ngReset)="reiniciarForm()" (ngSubmit)="salvar()" [formGroup]="cadastro" autocomplete="off" novalidate>
+  <mat-card class="center width50" >
+    <form autocomplete="off" novalidate [formGroup]="cadastro" (ngSubmit)="submit()" (ngReset)="reiniciarForm()">
       <mat-card-content>
-        <dio-input-text placeholder="Titulo *"  controlName="titulo" [formGroup]="cadastro"></dio-input-text>
-
-        <dio-input-text placeholder="Link Foto" controlName="urlFoto" [formGroup]="cadastro"></dio-input-text>
-
-        <dio-input-date placeholder="Data de Lançamento *" controlName="dataLancamento" [formGroup]="cadastro"></dio-input-date>
-
-        <dio-input-textarea placeholder="Descrição" controlName="descricao" [formGroup]="cadastro"></dio-input-textarea>
-
-        <dio-input-number min="0" max="10" step="0.1" controlName="notaImdb" placeholder="Nota IMDb *" [formGroup]="cadastro"></dio-input-number>
-
-        <dio-input-text placeholder="Link IMDb" controlName="urlIMDb" [formGroup]="cadastro"></dio-input-text>
-
-        <dio-input-select placeholder="Gênero *" controlName="genero" [opcoes]="generos" [formGroup]="cadastro"></dio-input-select>
+        <dio-input-text titulo="Título *" controlName="titulo" [formGroup]="cadastro"></dio-input-text>
+        <dio-input-text titulo="Link Foto" controlName="urlFoto" [formGroup]="cadastro"></dio-input-text>
+        <dio-input-date titulo="Data de Lançamento *" controlName="dtLancamento" [formGroup]="cadastro"></dio-input-date>
+        <dio-input-textarea titulo="Descrição" controlName="descricao" [formGroup]="cadastro"></dio-input-textarea>
+        <dio-input-number titulo="Nota IMDb *" controlName="nota" step="0.1" [formGroup]="cadastro"></dio-input-number>
+        <dio-input-text titulo="Link IMDb" controlName="urlIMDb" [formGroup]="cadastro"></dio-input-text>
+        <dio-input-select titulo="Gênero *" [opcoes]="generos" controlName="genero" [formGroup]="cadastro"></dio-input-select>
       </mat-card-content>
       <mat-card-actions>
         <button type="submit" color="accent" mat-raised-button>Salvar</button>
