--- a/src/app/shared/components/campos/input-date/input-date.component.html
+++ b/src/app/shared/components/campos/input-date/input-date.component.html
@@ -1,16 +1,14 @@
 <div [formGroup]="formGroup">
   <mat-form-field class="full-width">
-    <input readonly matInput
-           [matDatepicker]="picker"
-           [placeholder]="placeholder"
-           [name]="controlName"
-           [formControlName]="controlName"
-           (click)="picker.open()">
-    <mat-error
-      *ngIf="validacao.hasErrorValidation(formControl, 'required')">
-      Campo Obrigatório
-    </mat-error>
+    <input  matInput
+            readonly
+            [matDatepicker]="picker"
+            [placeholder]="titulo"
+            [name]="controlName"
+            [formControlName]="controlName"
+            (click)="picker.open()">
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
+  <mat-error *ngIf="validacao.hasErrorValidar(formControl, 'required')">Campo obrigatório</mat-error>
   </mat-form-field>
 </div>
