--- a/src/app/shared/components/campos/input-select/input-select.component.html
+++ b/src/app/shared/components/campos/input-select/input-select.component.html
@@ -1,13 +1,8 @@
 <div [formGroup]="formGroup">
   <mat-form-field class="full-width">
-    <mat-select
-      [placeholder]="placeholder"
-      [formControlName]="controlName">
+    <mat-select [placeholder]="titulo" [formControlName]="controlName">
       <mat-option *ngFor="let opcao of opcoes" [value]="opcao">{{opcao}}</mat-option>
     </mat-select>
-    <mat-error
-      *ngIf="validacao.hasErrorValidation(formControl, 'required')">
-      Campo Obrigatório
-    </mat-error>
+    <mat-error *ngIf="validacao.hasErrorValidar(formControl, 'required')">Campo obrigatório</mat-error>
   </mat-form-field>
 </div>
