--- a/src/app/shared/components/campos/input-text/input-text.component.html
+++ b/src/app/shared/components/campos/input-text/input-text.component.html
@@ -1,20 +1,15 @@
 <div [formGroup]="formGroup">
   <mat-form-field class="full-width">
-    <input matInput
-           [placeholder]="placeholder"
-           [name]="controlName"
-           [formControlName]="controlName">
-    <mat-error
-      *ngIf="validacao.hasErrorValidation(formControl, 'required')">
-      Campo Obrigatório
+    <input  matInput
+            [placeholder]="titulo"
+            [name]="controlName"
+            [formControlName]="controlName">
+    <mat-error *ngIf="validacao.hasErrorValidar(formControl, 'required')">Campo obrigatório</mat-error>
+    <mat-error *ngIf="validacao.hasErrorValidar(formControl, 'minlength')">
+      Campo precisa ter no mínimo {{validacao.lengthValidar(formControl, 'minlength')}} caracteres
     </mat-error>
-    <mat-error
-      *ngIf="validacao.hasErrorValidation(formControl,'minlength')">
-      Campo deve ter no mínimo {{validacao.lengthValidar(formControl, 'minlength')}} caracteres
-    </mat-error>
-    <mat-error
-      *ngIf="validacao.hasErrorValidation(formControl, 'maxlength')">
-      Campo deve ter no máximo {{validacao.lengthValidar(formControl, 'maxlength')}} caracteres
+    <mat-error *ngIf="validacao.hasErrorValidar(formControl, 'maxlength')">
+      Campo pode ter no máximo {{validacao.lengthValidar(formControl, 'maxlength')}} caracteres
     </mat-error>
   </mat-form-field>
 </div>
