--- a/src/app/filmes/listagem-filmes/listagem-filmes.component.html
+++ b/src/app/filmes/listagem-filmes/listagem-filmes.component.html
@@ -1,13 +1,29 @@
 <mat-toolbar class="app-title">Filmes Cadastrados</mat-toolbar>
-<div class="home-content" infiniteScroll (scrolled)="onScroll()">
+<mat-card class="float-left mg10 filtro-listagem">
+  <form autocomplete="off" novalidate [formGroup]="filtroFilme">
+    <div class="float-left width50">
+      <div class="padding10">
+        <dio-input-text titulo="Pesquisar por filme" controlName="texto" [formGroup]="filtroFilme"></dio-input-text>
+      </div>
+    </div>
+    <div class="float-left width50">
+      <div class="padding10">
+        <dio-input-select titulo="Pesquisar por gênero" controlName="genero" [opcoes]="generos"
+                          [formGroup]="filtroFilme"></dio-input-select>
+      </div>
+    </div>
 
+  </form>
+</mat-card>
+
+<div class="home-content" infiniteScroll (scrolled)="onScroll()">
   <mat-card class="home-card" *ngFor="let filme of filmes">
     <mat-card-header>
       <div mat-card-avatar></div>
       <mat-card-title>{{filme.titulo}}</mat-card-title>
       <mat-card-subtitle>{{filme.genero}}</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image [src]="filme.urlFoto" >
+    <img mat-card-image [src]="filme.urlFoto">
     <mat-card-content>
       <p>
         {{filme.descricao}}
