--- a/src/app/filmes/listagem-filmes/listagem-filmes.component.html
+++ b/src/app/filmes/listagem-filmes/listagem-filmes.component.html
@@ -16,21 +16,23 @@
   </form>
 </mat-card>
 
-<div class="home-content" infiniteScroll (scrolled)="onScroll()">
+<div class="home-content" infiniteScroll (scrolled)="onScroll()" *ngIf="filmes.length; else semRegistro ">
   <mat-card class="home-card" *ngFor="let filme of filmes">
     <mat-card-header>
       <div mat-card-avatar></div>
       <mat-card-title>{{filme.titulo}}</mat-card-title>
       <mat-card-subtitle>{{filme.genero}}</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image [src]="filme.urlFoto">
+    <img mat-card-image [src]="filme.urlFoto || semFoto">
     <mat-card-content>
-      <p>
-        {{filme.descricao}}
-      </p>
+      <p [innerHTML]="filme.descricao || 'Nenhuma descrição informada'"></p>
     </mat-card-content>
     <mat-card-actions>
       <button color="accent" mat-raised-button>ABRIR</button>
     </mat-card-actions>
   </mat-card>
 </div>
+
+<ng-template #semRegistro>
+  <h1 class="main-div full-width">Nenhum registro encontrado!</h1>
+</ng-template>
